# llmctl

./: .gitignore  Cargo.toml  LICENSE  README.md  README_CN.md  llmctl.json  t.sh
.github/workflows/: release.yml
crate_llm_examples/: anthropic_example.rs  anthropic_streaming_example.rs  anthropic_thinking_example.rs  google_example.rs  google_streaming_example.rs  google_tool_calling_example.rs  huggingface_example.rs  model_listing_example.rs  openai_examples.rs  openai_reasoning_example.rs  openai_streaming_example.rs  tool_calling_example.rs  xai_example.rs
docs/: 架构设计文档.md  需求文档.md
src/: builder.rs  main.rs
src/backends/: mod.rs  openai.rs  openai_reasoning.rs
src/config/: converter.rs  loader.rs  mod.rs  schema.rs
src/error/: mod.rs  types.rs
src/output/: formatter.rs  mod.rs  stream.rs
src/provider/: client.rs  mod.rs
src/utils/: mod.rs  prompt.rs
