[package]
name = "llmctl"
version = "0.1.4"
edition = "2021"
description = "A CLI tool for testing and validating LLM (Large Language Model) services. Supports multiple providers including OpenAI, Gemini, Claude, Ollama, DeepSeek, and any OpenAI-compatible APIs. "
authors = ["zhangzhenhu"]
license = "MIT"

[dependencies]
# CLI 参数解析
clap = { version = "4.5", features = ["derive"] }

# 绝杀：强制覆盖所有依赖，升级 ring，干掉老版本
ring = "0.17.14"
# LLM 后端
llm = { version = "1.3", default-features = false, features = ["full","rustls-tls"] }
awc = { version = "3", default-features = false, features = ["rustls"] }
# 异步运行时
tokio = { version = "1.36", features = ["full"] }
futures-util = "0.3"
futures = "0.3"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# 错误处理
thiserror = "1.0"

# 敏感信息
secrecy = "0.8"

# 彩色输出
colored = "2.1"

# 路径处理
dirs = "5.0"

# 日志
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12.28", features = ["rustls-tls","json", "stream","multipart", "rustls-tls-native-roots"],default-features = false }
async-trait = "0.1"

[features]
default = []
